import React from 'react'
import { shallow } from 'enzyme'
import { ExpenseList } from '../../components/ExpenseListItem'
import expenses from '../fixtures/expensesFixtures'

test('should render ExpenseList with expense', () => {
    const wrapper = shallow(<ExpenseList expenses={expenses} />)
    expect(wrapper).toMatchSnapshot()
})

test('should render ExpenseList with no expense', () => {
    const wrapper = shallow(<ExpenseList expenses={[]} />)
    expect(wrapper).toMatchSnapshot()
})
